--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3,53 +3,72 @@
 html {
   overflow-x: hidden;
   font-size: 1em;
-  margin: 2rem; }
+  margin: 2rem;
+  margin-top: 0px;}
 
 body {
     font-family: 'Roboto', sans-serif;
-    margin-left: calc(50% + 5rem);
+    line-height: 1.5;
+    margin-left: calc(55% + 5rem);
     margin-right: 8rem;
-    font-size: 16px; }
+    font-size: 16px;
+    background-color:#ebfaeb;}
     @media screen and (max-width: 1431px) {
     body {
-      margin-left: calc(50% + 40px);
+      margin-left: calc(55% + 40px);
       margin-right: 5rem; } }
-    @media screen and (max-width: 800px) {
+    @media screen and (max-width: 1117px) {
     body {
       margin-left: 0;
       margin-right: 0rem; } }
 }
 
 #container {
-    width: 90%;
     margin: auto;
     background-color: #DEDEDE;
+}
+
+h1 {
+  font-family: 'Gothic A1', sans-serif;
+  line-height: 1.25; 
+  margin: 20 0 20px; 
+  font-size: 40px; 
+  color: #ff8000;
+  font-weight:normal;
+}
+
+h2 {
+  font-weight:normal;
+}
+
+p {
+  line-height: 2;
 }
 
 /* Partial */
 
 #float-img {
     background-size: cover;
-    background-position: -100px;
     background-repeat: no-repeat;
-    width: calc(50% - 5rem);
+    width: calc(55% - 5rem);
     height: 100vh;
     top: 0;
     left: 5rem;
     position: fixed; }
-@media screen and (max-width: 800px) {
+
+@media screen and (max-width: 1117px) {
 #float-img {
     position: relative;
     left: 0;
     width: 100%;
-    height: 30vh;
+    height: 20vh;
     margin-bottom: 30px; } }
 
 header nav {
-    padding-top: .5em;
   margin-top: 0rem;
-  margin-bottom: 4rem; }
-  @media screen and (max-width: 1003px) {
+  margin-bottom: 2rem;
+  background-color:#7baf79;}
+  @media screen and (max-width: 1198px) {
     nav {
       text-align: center; } }
 
@@ -62,7 +81,9 @@ nav ul li {
     margin: 0;
     padding: 0;
     display: inline-block; }
-@media screen and (max-width: 480px) {
+
+/* valtas fullscrenn, tabbol asztaliba */
+@media screen and (max-width: 519px) {
 nav ul li {
     display: block; } }
 
@@ -70,13 +91,18 @@ nav ul li a {
     padding: .5rem 0rem;
     margin: 0 .5rem;
     display: block;
-    color: rgba(0, 0, 0, 0.4);
+    color: #ffffff;
     font-weight: 700;
     font-size: 12px;
     text-transform: uppercase;
     letter-spacing: .2em;
-    border-bottom: 2px solid transparent; }
+    border-bottom: 2px solid transparent;
+    text-decoration:none;
+}
 
+nav ul li a:hover{
+    box-shadow: 0 5px 0 0 #ff8000;
+}
 @media screen and (max-width: 1431px) {
 nav ul li a {
     margin: 0 .2rem; } }
@@ -100,4 +126,48 @@ nav ul li.active a {
     border-bottom: 2px solid transparent; } }
 }
 
+.coverpic {
+  max-width: 100%; 
+  height: 100%; 
+  overflow: hidden; 
+  object-fit: cover;
+}
 
+@media screen and (max-width: 800px) {
+  .coverpic {
+    position: relative;
+      left: 0;
+      width: 100%;
+      height: 30vh;
+      margin-bottom: 30px; 
+  } }
+
+#content span{
+  line-height: 2;
+}
+
+/*.header_banner {
+    display:none;
+}
+*/
+
+/*media screen and (max-width: 800px) { */
+.header_banner {
+    display: block;
+    width: 100%;
+    background-color: #7baf79;
+    font-size: 50px;font-size: 50px;
+    text-transform: uppercase;
+    padding: 30px;
+    padding-left: 0px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
+    box-sizing: border-box;
+    color: #ffffff;
+    }
+
+@media screen and (max-width: 800px) { 
+    .header_banner {
+        margin:0px;
+    }
+    }
