--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3,14 +3,14 @@
 html {
   overflow-x: hidden;
   font-size: 1em;
-  margin: 2rem;
-  margin-top: 0px;}
+  margin-top: 0px;
+  overflow-y: scroll;
+}
 
 body {
     font-family: 'Roboto', sans-serif;
-    line-height: 1.5;
     margin-left: calc(55% + 5rem);
-    margin-right: 8rem;
+    margin-right: 3rem;
     font-size: 16px;
     background-color:#ebfaeb;}
     @media screen and (max-width: 1431px) {
@@ -24,9 +24,19 @@ body {
 }
 
 #container {
-    margin: auto;
+    margin: 10px 
     background-color: #DEDEDE;
 }
+
+@media screen and (max-width: 500px) {
+    #container {
+      margin-left: 10px;
+      margin-right: 10px; } }
+
+@media screen and (max-width: 1117px) {
+    #container {
+      margin-left: 20px;
+      margin-right: 20px; } }
 
 h1 {
   font-family: 'Gothic A1', sans-serif;
@@ -88,7 +98,7 @@ nav ul li {
     display: block; } }
 
 nav ul li a {
-    padding: .5rem 0rem;
+    padding: .5rem 0relm;
     margin: 0 .5rem;
     display: block;
     color: #ffffff;
@@ -113,9 +123,6 @@ nav ul li a {
 
 nav ul li a:hover {
     color: rgba(0, 0, 0, 0.7); }
-
-nav ul li:first-child a {
-    margin-left: 0; }
 
 nav ul li.active a {
     color: rgba(0, 0, 0, 0.7);
@@ -171,3 +178,72 @@ nav ul li.active a {
         margin:0px;
     }
     }
+
+.content_third { 
+    float:left;
+    width:30%;
+    margin:1.5px;
+}
+
+.content_half {
+  float:left;
+    width:46%;
+    margin:2%;
+}
+
+.contact {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 100;
+    text-align: center;
+}
+
+.contact_p {
+    font-weight: bold;
+    margin: 0 auto;
+    text-align: center;
+}
+
+
+
+input,
+textarea {
+  width: 100%;
+  border: 1px solid #ccc;
+  background: #FFF;
+  margin: 0 0 5px;
+  padding: 10px;
+font-family: 'Open Sans', sans-serif;
+font-weight: bold;
+resize: none;
+    box-sizing: border-box;
+}
+
+
+button[type="submit"] {
+  cursor: pointer;
+  width: 100%;
+  border: none;
+  background: #7baf79;
+  color: #FFF;
+  padding: 10px;
+  font-size: 15px;
+}
+
+button[type="submit"]:hover {
+  background: #43A047;
+  -webkit-transition: background 0.3s ease-in-out;
+  -moz-transition: background 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+}
+
+button[type="submit"]:active {
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
+}
+
+#gallery img {
+    width:200px;
+    height: 150px;
+    display:inline;
+    float: left;
+    overflow: hidden;
+}
